@@ -1,3 +1,8 @@
+Sat Sep  5 08:28:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* hash.c (rb_hash_equal, rb_hash_eql): [DOC] the orders of each
+	  hashes are not compared.  [Bug #11508]
+
 Fri Sep  4 23:26:22 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* include/ruby/win32.h: fix macro name for VC runtime version,
